--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
-    "dev": " cross-env NODE_ENV=development nodemon app"
+    "start": " node app",
+    "dev": "  nodemon app"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ogbonna Chinonso Ubadire",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
